--- a/test/src/test/java/uks/debuggen/interconnect/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/interconnect/classModel.yaml
@@ -50,6 +50,10 @@ ionicKassel42.start();
 // start service
 CityElectricsKasselService cityElectricsKassel = new CityElectricsKasselService();
 cityElectricsKassel.start();
+try {
+   Thread.sleep(500);
+} catch (Exception e) {
+}
 
 open(\"http://localhost:42000\");
 $(\"body\").shouldHave(text(\"event broker\"));
@@ -80,7 +84,9 @@ for (DataEvent dataEvent : ionicKassel42.getBuilder().getEventStore().values()) 
    ionicKassel42.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = ionicKassel42.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/ionicKassel4211_55.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/ionicKassel4211_55.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42001\");
 
@@ -92,9 +98,18 @@ for (DataEvent dataEvent : cityElectricsKassel.getBuilder().getEventStore().valu
    cityElectricsKassel.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = cityElectricsKassel.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/cityElectricsKassel11_55.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/cityElectricsKassel11_55.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42002\");
+try {
+   Thread.sleep(3000);
+} catch (Exception e) {
+}
+eventBroker.stop();
+ionicKassel42.stop();
+cityElectricsKassel.stop();
 
 System.out.println();
 "
@@ -116,8 +131,9 @@ try {
    HttpResponse<String> response = Unirest.post(\"http://localhost:42000/publish\")
          .body(yaml)
          .asString();
+         Thread.sleep(200);
 }
-catch (UnirestException e) {
+catch (Exception e) {
    e.printStackTrace();
 }"
   modified: 	false
