--- a/test/src/test/java/uks/debuggen/page/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/page/classModel.yaml
@@ -46,6 +46,10 @@ eventBroker.start();
 // start service
 ShopService shop = new ShopService();
 shop.start();
+try {
+   Thread.sleep(500);
+} catch (Exception e) {
+}
 
 open(\"http://localhost:42000\");
 $(\"body\").shouldHave(text(\"event broker\"));
@@ -93,6 +97,12 @@ $(\"#tshirt\").click();
 open(\"http://localhost:42000\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_10:\"));
+try {
+   Thread.sleep(3000);
+} catch (Exception e) {
+}
+eventBroker.stop();
+shop.stop();
 
 System.out.println();
 "
@@ -114,8 +124,9 @@ try {
    HttpResponse<String> response = Unirest.post(\"http://localhost:42000/publish\")
          .body(yaml)
          .asString();
+         Thread.sleep(200);
 }
-catch (UnirestException e) {
+catch (Exception e) {
    e.printStackTrace();
 }"
   modified: 	false
