--- a/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
@@ -46,6 +46,10 @@ eventBroker.start();
 // start service
 DocMedicalService docMedical = new DocMedicalService();
 docMedical.start();
+try {
+   Thread.sleep(500);
+} catch (Exception e) {
+}
 
 open(\"http://localhost:42000\");
 $(\"body\").shouldHave(text(\"event broker\"));
@@ -157,7 +161,9 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_00.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_00.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42001\");
 // check data note 14:00:01
@@ -186,7 +192,9 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_01.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_01.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42001\");
 // check data note 14:01:01
@@ -214,14 +222,16 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_02.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_02.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42001\");
 // check data note 14:02:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- cough:\"));
 pre.shouldHave(matchText(\"name:.*cough\"));
-pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00\"));
+pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00.*\"));
 
 // create SymptomEvent: symptom validated
 SymptomEvent e1403 = new SymptomEvent();
@@ -242,14 +252,16 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_03.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_03.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42001\");
 // check data note 14:03:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- runny_nose:\"));
 pre.shouldHave(matchText(\"name:.*\\"runny nose\\"\"));
-pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00\"));
+pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00.*\"));
 
 // create TestEvent: test done
 TestEvent e1404 = new TestEvent();
@@ -271,7 +283,9 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_04.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_04.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42001\");
 // check data note 14:04:01
@@ -285,7 +299,7 @@ pre.shouldHave(matchText(\"consultation:.*alice_2021_06_02T14_00\"));
 pre = $(\"#data\");
 pre.shouldHave(text(\"- medium_fever:\"));
 pre.shouldHave(matchText(\"name:.*\\"medium fever\\"\"));
-pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00\"));
+pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00.*\"));
 
 // create DiagnosisEvent: diagnosis done
 DiagnosisEvent e1405 = new DiagnosisEvent();
@@ -306,7 +320,9 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_05.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_05.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42001\");
 // check data note 14:05:01
@@ -334,7 +350,9 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_06.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_06.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42001\");
 // check data note 14:06:01
@@ -394,6 +412,12 @@ publish(e142002);
 open(\"http://localhost:42000\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_20_02:\"));
+try {
+   Thread.sleep(3000);
+} catch (Exception e) {
+}
+eventBroker.stop();
+docMedical.stop();
 
 System.out.println();
 "
@@ -415,8 +439,9 @@ try {
    HttpResponse<String> response = Unirest.post(\"http://localhost:42000/publish\")
          .body(yaml)
          .asString();
+         Thread.sleep(200);
 }
-catch (UnirestException e) {
+catch (Exception e) {
    e.printStackTrace();
 }"
   modified: 	false
