--- a/test/src/test/java/uks/debuggen/medical/marburgexpertsystem/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/marburgexpertsystem/classModel.yaml
@@ -46,6 +46,10 @@ eventBroker.start();
 // start service
 MarburgHealthSystemService marburgHealthSystem = new MarburgHealthSystemService();
 marburgHealthSystem.start();
+try {
+   Thread.sleep(500);
+} catch (Exception e) {
+}
 
 open(\"http://localhost:42000\");
 $(\"body\").shouldHave(text(\"event broker\"));
@@ -74,26 +78,28 @@ for (DataEvent dataEvent : marburgHealthSystem.getBuilder().getEventStore().valu
    marburgHealthSystem.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = marburgHealthSystem.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/marburgHealthSystem12_00.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/marburgHealthSystem12_00.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42001\");
 // check data note 12:00:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- common_cold:\"));
 pre.shouldHave(matchText(\"name:.*\\"common cold\\"\"));
-pre.shouldHave(matchText(\"symptoms:.*runny_nosecoughhoarsenessmedium_fever\"));
-pre.shouldHave(matchText(\"counterSymptoms:.*chillsjoint_pain\"));
+pre.shouldHave(matchText(\"symptoms:.*runny_nose.*cough.*hoarseness.*medium_fever.*\"));
+pre.shouldHave(matchText(\"counterSymptoms:.*chills.*joint_pain.*\"));
 // check data note 12:00:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- influenza:\"));
 pre.shouldHave(matchText(\"name:.*influenza\"));
-pre.shouldHave(matchText(\"symptoms:.*coughmedium_feverchillsjoint_painheadache\"));
-pre.shouldHave(matchText(\"counterSymptoms:.*lung_noises\"));
+pre.shouldHave(matchText(\"symptoms:.*cough.*medium_fever.*chills.*joint_pain.*headache.*\"));
+pre.shouldHave(matchText(\"counterSymptoms:.*lung_noises.*\"));
 // check data note 12:00:03
 pre = $(\"#data\");
 pre.shouldHave(text(\"- pneumonia:\"));
 pre.shouldHave(matchText(\"name:.*pneumonia\"));
-pre.shouldHave(matchText(\"symptoms:.*coughmedium_feverchillsjoint_painheadachelung_noises\"));
+pre.shouldHave(matchText(\"symptoms:.*cough.*medium_fever.*chills.*joint_pain.*headache.*lung_noises.*\"));
 // check data note 12:00:04
 pre = $(\"#data\");
 pre.shouldHave(text(\"- cough:\"));
@@ -126,6 +132,12 @@ pre.shouldHave(matchText(\"name:.*headache\"));
 pre = $(\"#data\");
 pre.shouldHave(text(\"- lung_noises:\"));
 pre.shouldHave(matchText(\"name:.*\\"lung noises\\"\"));
+try {
+   Thread.sleep(3000);
+} catch (Exception e) {
+}
+eventBroker.stop();
+marburgHealthSystem.stop();
 
 System.out.println();
 "
@@ -147,8 +159,9 @@ try {
    HttpResponse<String> response = Unirest.post(\"http://localhost:42000/publish\")
          .body(yaml)
          .asString();
+         Thread.sleep(200);
 }
-catch (UnirestException e) {
+catch (Exception e) {
    e.printStackTrace();
 }"
   modified: 	false
