--- a/test/src/test/java/uks/debuggen/shop/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/shop/classModel.yaml
@@ -50,6 +50,10 @@ shop.start();
 // start service
 StorageService storage = new StorageService();
 storage.start();
+try {
+   Thread.sleep(500);
+} catch (Exception e) {
+}
 
 open(\"http://localhost:42000\");
 $(\"body\").shouldHave(text(\"event broker\"));
@@ -81,7 +85,9 @@ for (DataEvent dataEvent : storage.getBuilder().getEventStore().values()) {
    storage.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = storage.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage12_00.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage12_00.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42002\");
 // check data note 12:01
@@ -117,7 +123,9 @@ for (DataEvent dataEvent : shop.getBuilder().getEventStore().values()) {
    shop.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = shop.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/shop13_01.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/shop13_01.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42100\");
 // check data note 13:06
@@ -133,7 +141,9 @@ for (DataEvent dataEvent : storage.getBuilder().getEventStore().values()) {
    storage.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = storage.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage13_01.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage13_01.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42002\");
 // check data note 13:05
@@ -165,7 +175,9 @@ for (DataEvent dataEvent : storage.getBuilder().getEventStore().values()) {
    storage.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = storage.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage14_00.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage14_00.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42002\");
 // check data note 14:01
@@ -186,7 +198,9 @@ for (DataEvent dataEvent : shop.getBuilder().getEventStore().values()) {
    shop.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = shop.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/shop14_00.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/shop14_00.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42100\");
 // check data note 14:04
@@ -217,7 +231,9 @@ for (DataEvent dataEvent : shop.getBuilder().getEventStore().values()) {
    shop.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = shop.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/shop13_11.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/shop13_11.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42100\");
 // check data note 13:16
@@ -233,9 +249,18 @@ for (DataEvent dataEvent : storage.getBuilder().getEventStore().values()) {
    storage.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = storage.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage13_11.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage13_11.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42002\");
+try {
+   Thread.sleep(3000);
+} catch (Exception e) {
+}
+eventBroker.stop();
+shop.stop();
+storage.stop();
 
 System.out.println();
 "
@@ -257,8 +282,9 @@ try {
    HttpResponse<String> response = Unirest.post(\"http://localhost:42000/publish\")
          .body(yaml)
          .asString();
+         Thread.sleep(200);
 }
-catch (UnirestException e) {
+catch (Exception e) {
    e.printStackTrace();
 }"
   modified: 	false
