--- a/test/src/test/java/uks/debuggen/studyright/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/studyright/classModel.yaml
@@ -46,6 +46,10 @@ eventBroker.start();
 // start service
 StudyRightService studyRight = new StudyRightService();
 studyRight.start();
+try {
+   Thread.sleep(500);
+} catch (Exception e) {
+}
 
 open(\"http://localhost:42000\");
 $(\"body\").shouldHave(text(\"event broker\"));
@@ -72,25 +76,27 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_00.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_00.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:00:00
 pre = $(\"#data\");
 pre.shouldHave(text(\"- studyRight:\"));
-pre.shouldHave(matchText(\"rooms:.*mathexam\"));
+pre.shouldHave(matchText(\"rooms:.*math.*exam.*\"));
 // check data note 12:00:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- math:\"));
 pre.shouldHave(matchText(\"credits:.*23\"));
 pre.shouldHave(matchText(\"uni:.*studyRight\"));
-pre.shouldHave(matchText(\"doors:.*modelingalgebra\"));
+pre.shouldHave(matchText(\"doors:.*modeling.*algebra.*\"));
 // check data note 12:00:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- modeling:\"));
 pre.shouldHave(matchText(\"uni:.*studyRight\"));
 pre.shouldHave(matchText(\"credits:.*42\"));
-pre.shouldHave(matchText(\"doors:.*mathalgebraexam\"));
+pre.shouldHave(matchText(\"doors:.*math.*algebra.*exam.*\"));
 // check data note 12:00:03
 pre = $(\"#data\");
 pre.shouldHave(text(\"- algebra:\"));
@@ -107,7 +113,6 @@ pre.shouldHave(text(\"- carli:\"));
 pre.shouldHave(matchText(\"name:.*Carli\"));
 pre.shouldHave(matchText(\"birthYear:.*1970\"));
 pre.shouldHave(matchText(\"studentId:.*stud42\"));
-pre.shouldHave(matchText(\"uni:.*StudyRight\"));
 
 // create FindToursCommand: find tours 12:01
 FindToursCommand e1201 = new FindToursCommand();
@@ -126,7 +131,9 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_01.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_01.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:01:00
@@ -156,7 +163,9 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_02.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_02.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:02:01
@@ -185,7 +194,9 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_03.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_03.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:03:01
@@ -225,7 +236,9 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_05.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_05.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:05:01
@@ -265,7 +278,9 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_07.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_07.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:07:01
@@ -294,7 +309,9 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_08.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_08.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:08:01
@@ -323,7 +340,9 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_09.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_09.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:09:02
@@ -351,7 +370,9 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_10.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_10.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:10:01
@@ -378,7 +399,9 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_11.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_11.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:11:01
@@ -405,7 +428,9 @@ for (DataEvent dataEvent : studyRight.getBuilder().getEventStore().values()) {
    studyRight.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = studyRight.getBuilder().getModel().getModelMap();
-org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_12.svg\", modelMap.values());
+if (modelMap.values().size() > 0) {
+   org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/studyRight12_12.svg\", modelMap.values());
+}
 
 open(\"http://localhost:42400\");
 // check data note 12:12:01
@@ -415,6 +440,12 @@ pre.shouldHave(matchText(\"stops:.*\\"math algebra modeling exam\\"\"));
 
 // page 12:13
 open(\"http://localhost:42400/page/12_13\");
+try {
+   Thread.sleep(3000);
+} catch (Exception e) {
+}
+eventBroker.stop();
+studyRight.stop();
 
 System.out.println();
 "
@@ -436,8 +467,9 @@ try {
    HttpResponse<String> response = Unirest.post(\"http://localhost:42000/publish\")
          .body(yaml)
          .asString();
+         Thread.sleep(200);
 }
-catch (UnirestException e) {
+catch (Exception e) {
    e.printStackTrace();
 }"
   modified: 	false
