--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -31,6 +31,8 @@ jobs:
                path: ~/.gradle/caches
                key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
                restore-keys: ${{ runner.os }}-gradle
+         -  name: Check gradlew permissions
+            run: ls -al
          -  name: Build with Gradle
             run: ./gradlew build
          -  name: Deploy to Maven Central
